--- a/subd-dz15/Vagrantfile
+++ b/subd-dz15/Vagrantfile
@@ -91,7 +91,9 @@ Vagrant.configure("2") do |config|
      mysql -u root -proot <<< "SOURCE /vagrant/init-user.sql"
 
      echo "creating blog db structure & data ..."
-     mysql -u root -proot <<< "SOURCE /vagrant/init-db.sql"
+     mysql -u root -proot <<< "SOURCE /vagrant/blog_db-schema.sql"
+     mysql -u root -proot <<< "SOURCE /vagrant/blog_db-data.sql"
+     mysql -u root -proot <<< "SOURCE /vagrant/blog_db-procedures.sql"
 
   SHELL
 end
